[tool.poetry]
name = "html-to-draftjs"
version = "0.1.0"
description = ""
authors = ["Anand Ghorpade <anno.ghorpade@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9"
lxml = "^4.6.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.8.1"
mock = "^4.0.2"
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
